--- a/public/beta.html
+++ b/public/beta.html
@@ -18,12 +18,11 @@
     .event-meta { color:#6b7280; font-size: 12px; }
   </style>
 
-  <!-- 用 import map 把 ./src/timeline/fetch.js 映射到一个内联 mock。
-       关键修正：start/end 使用 Date 对象。 -->
+  <!-- 关键修改：start/end 使用毫秒时间戳（number），避免任何 Date 类型判定问题 -->
   <script type="importmap">
   {
     "imports": {
-      "./src/timeline/fetch.js": "data:text/javascript;charset=utf-8,%2F%2F%20mock%20fetchAndNormalize%20for%20beta.html%0Aexport%20async%20function%20fetchAndNormalize()%20%7B%0A%20%20const%20items%20%3D%20%5B%0A%20%20%20%20%7B%20id%3A%201%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3EProject%20Kickoff%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E5%9C%B0%E5%8C%BA%EF%BC%9A%E6%97%A5%E6%9C%AC%20%C2%B7%20%E5%B9%B3%E5%8F%B0%EF%BC%9APC%3C%2Fdiv%3E'%2C%20start%3A%20new%20Date('2023-11-01T00%3A00%3A00Z')%20%7D%2C%0A%20%20%20%20%7B%20id%3A%202%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3EAlpha%20Internal%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E5%85%AC%E5%8F%B8%EF%BC%9AAcorn%20Games%3C%2Fdiv%3E'%2C%20start%3A%20new%20Date('2024-03-12T00%3A00%3A00Z')%20%7D%2C%0A%20%20%20%20%7B%20id%3A%203%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3EClosed%20Beta%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E4%B8%BB%E6%9C%BA%EF%BC%9ASwitch%3C%2Fdiv%3E'%2C%20start%3A%20new%20Date('2024-07-05T00%3A00%3A00Z')%20%7D%2C%0A%20%20%20%20%7B%20id%3A%204%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3ELaunch%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E5%9C%B0%E5%8C%BA%EF%BC%9A%E5%8C%97%E7%BE%8E%3C%2Fdiv%3E'%2C%20start%3A%20new%20Date('2025-02-18T00%3A00%3A00Z')%20%7D%0A%20%20%5D%3B%0A%20%20return%20items%3B%0A%7D%0A"
+      "./src/timeline/fetch.js": "data:text/javascript;charset=utf-8,%2F%2F%20mock%20fetchAndNormalize%20for%20beta.html%0Aexport%20async%20function%20fetchAndNormalize()%20%7B%0A%20%20const%20U%20%3D%20Date.UTC;%0A%20%20const%20items%20%3D%20%5B%0A%20%20%20%20%7B%20id%3A%201%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3EProject%20Kickoff%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E5%9C%B0%E5%8C%BA%EF%BC%9A%E6%97%A5%E6%9C%AC%20%C2%B7%20%E5%B9%B3%E5%8F%B0%EF%BC%9APC%3C%2Fdiv%3E'%2C%20start%3A%20U(2023%2C10%2C1)%20%7D%2C%0A%20%20%20%20%7B%20id%3A%202%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3EAlpha%20Internal%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E5%85%AC%E5%8F%B8%EF%BC%9AAcorn%20Games%3C%2Fdiv%3E'%2C%20start%3A%20U(2024%2C2%2C12)%20%7D%2C%0A%20%20%20%20%7B%20id%3A%203%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3EClosed%20Beta%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E4%B8%BB%E6%9C%BA%EF%BC%9ASwitch%3C%2Fdiv%3E'%2C%20start%3A%20U(2024%2C6%2C5)%20%7D%2C%0A%20%20%20%20%7B%20id%3A%204%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3ELaunch%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E5%9C%B0%E5%8C%BA%EF%BC%9A%E5%8C%97%E7%BE%8E%3C%2Fdiv%3E'%2C%20start%3A%20U(2025%2C1%2C18)%20%7D%0A%20%20%5D%3B%0A%20%20return%20items%3B%0A%7D%0A"
     }
   }
   </script>
