--- a/public/beta.html
+++ b/public/beta.html
@@ -19,13 +19,16 @@
   </style>
 
   <!-- 关键修改：start/end 使用毫秒时间戳（number），避免任何 Date 类型判定问题 -->
-  <script type="importmap">
-  {
-    "imports": {
-      "./src/timeline/fetch.js": "data:text/javascript;charset=utf-8,%2F%2F%20mock%20fetchAndNormalize%20for%20beta.html%0Aexport%20async%20function%20fetchAndNormalize()%20%7B%0A%20%20const%20U%20%3D%20Date.UTC;%0A%20%20const%20items%20%3D%20%5B%0A%20%20%20%20%7B%20id%3A%201%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3EProject%20Kickoff%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E5%9C%B0%E5%8C%BA%EF%BC%9A%E6%97%A5%E6%9C%AC%20%C2%B7%20%E5%B9%B3%E5%8F%B0%EF%BC%9APC%3C%2Fdiv%3E'%2C%20start%3A%20U(2023%2C10%2C1)%20%7D%2C%0A%20%20%20%20%7B%20id%3A%202%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3EAlpha%20Internal%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E5%85%AC%E5%8F%B8%EF%BC%9AAcorn%20Games%3C%2Fdiv%3E'%2C%20start%3A%20U(2024%2C2%2C12)%20%7D%2C%0A%20%20%20%20%7B%20id%3A%203%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3EClosed%20Beta%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E4%B8%BB%E6%9C%BA%EF%BC%9ASwitch%3C%2Fdiv%3E'%2C%20start%3A%20U(2024%2C6%2C5)%20%7D%2C%0A%20%20%20%20%7B%20id%3A%204%2C%20content%3A%20'%3Ch4%20class%3D%22event-title%22%3ELaunch%3C%2Fh4%3E%3Cdiv%20class%3D%22event-meta%22%3E%E5%9C%B0%E5%8C%BA%EF%BC%9A%E5%8C%97%E7%BE%8E%3C%2Fdiv%3E'%2C%20start%3A%20U(2025%2C1%2C18)%20%7D%0A%20%20%5D%3B%0A%20%20return%20items%3B%0A%7D%0A"
-    }
-  }
-  </script>
+<!-- 只展示关键片段：去掉 import map，保留 vis 资源与调用 -->
+<script type="module">
+  import { mountTimeline } from "./src/timeline/mount.js";
+  document.addEventListener('DOMContentLoaded', () => {
+    const el = document.getElementById('timeline');
+    if (!el) return console.error('[beta] 未找到 #timeline 容器');
+    mountTimeline(el); // 会调用 ./src/timeline/fetch.js 的 fetchAndNormalize()
+  });
+</script>
+
 </head>
 <body>
   <header>
