--- a/public/beta.html
+++ b/public/beta.html
@@ -21,6 +21,8 @@
   <!-- 关键修改：start/end 使用毫秒时间戳（number），避免任何 Date 类型判定问题 -->
 <!-- 只展示关键片段：去掉 import map，保留 vis 资源与调用 -->
 <script type="module">
+  import './fetch.js';
+import './mount.js';
   import { mountTimeline } from "./src/timeline/mount.js";
   document.addEventListener('DOMContentLoaded', () => {
     const el = document.getElementById('timeline');
