--- a/public/beta.html
+++ b/public/beta.html
@@ -11,19 +11,40 @@
 
   <style>
     body {
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, 
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial,
         "Noto Sans", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
     }
+
+    /* 顶栏 */
     .topbar {
       display: flex;
       align-items: center;
       padding: 12px 16px;
       background: #f8fafc;
       border-bottom: 1px solid #e5e7eb;
-      font-size: 18px;
-      font-weight: bold;
+      font-size: 16px;
       color: #111827;
     }
+    .topbar-title {
+      font-weight: bold;
+    }
+    .topbar-spacer {
+      flex: 1;
+    }
+    .topbar-btn {
+      margin-left: 8px;
+      padding: 4px 10px;
+      font-size: 13px;
+      border-radius: 999px;
+      border: 1px solid #d1d5db;
+      background: #ffffff;
+      cursor: pointer;
+    }
+    .topbar-btn:hover {
+      background: #f3f4f6;
+    }
+
+    /* 时间轴容器 */
     #timeline {
       height: 720px;
       border: 1px solid #e5e7eb;
@@ -34,43 +55,46 @@
 </head>
 
 <body>
-  <!-- 顶部标题（已去除所有 Debug 信息） -->
+
+  <!-- 顶部标题 + 两个按钮 -->
   <div class="topbar">
-    电子游戏时间轴Beta版本
+    <div class="topbar-title">电子游戏时间轴Beta版本</div>
+    <div class="topbar-spacer"></div>
+    <button id="btn-help" class="topbar-btn">使用方法</button>
+    <button id="btn-roadmap" class="topbar-btn">开发计划与反馈</button>
   </div>
 
+  <!-- 时间轴容器 -->
   <div id="timeline"></div>
 
-  <!-- 入口脚本 -->
+  <!-- 脚本入口 -->
   <script type="module">
-
     /**********************
-     * （可选）覆盖 ENDPOINT
-     **********************/
-    // globalThis.TIMELINE_ENDPOINT = 'https://你的接口地址/exec';
-
-    /**********************
-     * 引入你的 mount.js
+     * 引入模块
      **********************/
     import { mountTimeline } from './src/timeline/mount.js';
+    import { initInfoDialogs } from './src/ui/info-dialog.js';
 
-    // 样式系统 ready（按你当前项目需求保留）
+    /**********************
+     * 初始化 info 对话框（使用方法 / 开发计划）
+     **********************/
+    initInfoDialogs();
+
+    /**********************
+     * 样式系统就绪信号
+     **********************/
     window.dispatchEvent(new Event('style:ready'));
 
-    // 挂载时间轴
+    /**********************
+     * 挂载时间轴
+     **********************/
     await mountTimeline(
       document.getElementById('timeline'),
       {
-        // 需要覆盖 vis 配置可在此加入
+        // 如需自定义 vis 参数，可在此处加入
       }
     );
-
-    /**********************
-     * ⚠ Debug 点击事件输出功能（已被移除）
-     * 原本包含 ARRAY_FOR_DEBUG / RAW_OBJECT 输出
-     * 根据你的要求完全删掉
-     **********************/
-
   </script>
+
 </body>
 </html>
