--- a/public/beta.html
+++ b/public/beta.html
@@ -61,7 +61,7 @@
     <div class="topbar-title">电子游戏时间轴Beta版本</div>
     <div class="topbar-spacer"></div>
     <button id="btn-help" class="topbar-btn">使用方法</button>
-    <button id="btn-roadmap" class="topbar-btn">开发计划与反馈</button>
+    <button id="btn-roadmap" class="topbar-btn">开发计划</button>
   </div>
 
   <!-- 时间轴容器 -->
