--- a/public/beta.html
+++ b/public/beta.html
@@ -62,6 +62,7 @@
     <div class="topbar-spacer"></div>
     <button id="btn-help" class="topbar-btn">使用方法</button>
     <button id="btn-roadmap" class="topbar-btn">开发计划</button>
+    <button id="btn-feedback" class="topbar-btn">反馈与建议</button>
   </div>
 
   <!-- 时间轴容器 -->
