--- a/public/beta-en.html
+++ b/public/beta-en.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
   <meta charset="utf-8" />
-  <title>电子游戏时间轴Beta版本</title>
+  <title>Video Game Timeline Beta Version</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- vis-timeline -->
@@ -58,11 +58,11 @@
 
   <!-- 顶部标题 + 两个按钮 -->
   <div class="topbar">
-    <div class="topbar-title">电子游戏时间轴Beta版本</div>
+    <div class="topbar-title">Video Game Timeline Beta Version</div>
     <div class="topbar-spacer"></div>
-    <button id="btn-help" class="topbar-btn">使用方法</button>
-    <button id="btn-roadmap" class="topbar-btn">开发计划</button>
-    <button id="btn-feedback" class="topbar-btn">反馈与建议</button>
+    <button id="btn-help" class="topbar-btn">How to Use</button>
+    <button id="btn-roadmap" class="topbar-btn">Future Update</button>
+    <button id="btn-feedback" class="topbar-btn">Feedback</button>
   </div>
 
   <!-- 时间轴容器 -->
