--- a/public/videogametimeline-world-en.html
+++ b/public/videogametimeline-world-en.html
@@ -30,10 +30,13 @@
 
   <div id="timeline"></div>
 
+  <!-- ✅ 先注入 variant -->
   <script>
     window.TIMELINE_REGION = 'world';
     window.TIMELINE_LANG = 'en';
   </script>
-  <script type="module" src="./src/bootstrap.js"></script>
+
+  <!-- ✅ 再加载 app.js（而不是 bootstrap.js） -->
+  <script type="module" src="./src/app.js"></script>
 </body>
 </html>
