--- a/public/videogametimeline-world-cn.html
+++ b/public/videogametimeline-world-cn.html
@@ -34,6 +34,6 @@
     window.TIMELINE_REGION = 'world';
     window.TIMELINE_LANG = 'zh';
   </script>
-  <script type="module" src="./src/bootstrap.js"></script>
+  <script type="module" src="./src/app.js"></script>
 </body>
 </html>
