--- a/public/videogametimeline-world-en.html
+++ b/public/videogametimeline-world-en.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="topbar">
-    <div class="topbar-title">World Video Game Timeline (English)</div>
+    <div class="topbar-title">World Video Game Timeline </div>
     <div class="topbar-spacer"></div>
     <button id="btn-help" class="topbar-btn">Usage</button>
     <button id="btn-roadmap" class="topbar-btn">Roadmap</button>
