--- a/public/videogametimeline-world-zh.html
+++ b/public/videogametimeline-world-zh.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="topbar">
-    <div class="topbar-title">世界电子游戏时间轴（中文）</div>
+    <div class="topbar-title">世界电子游戏时间轴</div>
     <div class="topbar-spacer"></div>
     <button id="btn-help" class="topbar-btn">使用方法</button>
     <button id="btn-roadmap" class="topbar-btn">开发计划</button>
